[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Brian McClune <bpmcclune@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
